--- a/22.10.27/02_Supervised_Learning_Regression.ipynb
+++ b/22.10.27/02_Supervised_Learning_Regression.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "EVA7HGHj7YSC"
       },
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "02_ba_NI84nY"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,9 +63,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ac5v4C7m9jHq",
-        "outputId": "4b083ff0-a80b-4181-d687-df6e6b634335"
+        "outputId": "26d458d7-1c5c-432c-927c-361f5f9ed25d"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hv6HcUAO-F20",
-        "outputId": "5aba8dec-941b-40f4-fb02-521b291fd264"
+        "outputId": "a4a3d015-5449-438d-ae83-df6af1a044ca"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 4
         }
       ]
     },
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "Z9mMRpjG-OCt"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,9 +177,9 @@
           "height": 206
         },
         "id": "7JenpgMZ-kdJ",
-        "outputId": "813d07fb-13e1-478a-c28e-d78a1ac03abd"
+        "outputId": "e890a43c-cdc3-49a0-d696-ec898f92c5e1"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -201,7 +201,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ea78e8f9-9e02-4f49-a505-2686a0ce3e78\">\n",
+              "  <div id=\"df-ec1b7170-3143-4dc0-b106-11d0c6c78046\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -320,7 +320,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea78e8f9-9e02-4f49-a505-2686a0ce3e78')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec1b7170-3143-4dc0-b106-11d0c6c78046')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -371,12 +371,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ea78e8f9-9e02-4f49-a505-2686a0ce3e78 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ec1b7170-3143-4dc0-b106-11d0c6c78046 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ea78e8f9-9e02-4f49-a505-2686a0ce3e78');\n",
+              "          const element = document.querySelector('#df-ec1b7170-3143-4dc0-b106-11d0c6c78046');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -399,7 +399,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 6
         }
       ]
     },
@@ -413,9 +413,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q6yyy0G5-yrj",
-        "outputId": "70161ea3-9e4e-4cce-ecfc-adbcedcf951d"
+        "outputId": "7ff28343-f0cd-4b87-ad87-262ca321ad33"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -425,7 +425,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 7
         }
       ]
     },
@@ -447,7 +447,7 @@
       "metadata": {
         "id": "ikPrY3aN_QoJ"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,9 +469,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R53zhUjvDE_D",
-        "outputId": "c2994216-e27d-42ac-a054-95ea6e30cdd0"
+        "outputId": "09605c7c-a733-433c-ad8f-6e75fc734bb3"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +485,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 9
         }
       ]
     },
@@ -498,7 +498,7 @@
       "metadata": {
         "id": "d6IWoGP1DYhU"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,9 +511,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gY6S8XdmF6_j",
-        "outputId": "65cd85d5-8a79-480a-c3e5-4f113d8a03c7"
+        "outputId": "76d48c8c-0bd5-46a9-f52f-4e8ba7375523"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 11
         }
       ]
     },
@@ -535,7 +535,7 @@
       "metadata": {
         "id": "3LoebUvcGZ_k"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +555,7 @@
       "metadata": {
         "id": "1llFDmHMGxfs"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -568,9 +568,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_dL2ZS9rHeW1",
-        "outputId": "d153998b-3c77-49a6-e1af-55d12e354cb2"
+        "outputId": "188915d0-8f07-45b5-8949-52152df0e7ec"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,19 +606,19 @@
           "height": 283
         },
         "id": "pPqMs7AYH9P2",
-        "outputId": "ad1cdbe4-dd41-4412-8b78-496f0d7955eb"
+        "outputId": "4a95d595-5488-477f-a934-379b60e53a39"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f5f75225610>"
+              "<matplotlib.legend.Legend at 0x7fa59a7e7810>"
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
@@ -654,9 +654,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zfRnUf71KYd1",
-        "outputId": "c375735a-d2a7-48c8-9a50-6c93b13fe76f"
+        "outputId": "2cc25c34-4f68-4fec-bb1f-79caea55da51"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +666,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 16
         }
       ]
     },
@@ -678,7 +678,7 @@
       "metadata": {
         "id": "c4LYgwr8MZq1"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -691,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DpdQBARoMnZw",
-        "outputId": "8937b3ff-3378-4816-b888-ccd96f0a8bd7"
+        "outputId": "b9d8b139-45e9-4c5a-f4ee-b4bc1de1b2dd"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +722,7 @@
       "metadata": {
         "id": "g3R5UtyeM5gS"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -735,9 +735,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RooUo5AFT0BB",
-        "outputId": "acf3e4ce-4aa7-448b-9ed7-4ba4d8ffd143"
+        "outputId": "190228a3-0035-49b0-ea30-d0805c720c05"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +747,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 20
         }
       ]
     },
@@ -759,7 +759,7 @@
       "metadata": {
         "id": "rsIC-QK3UR9h"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -772,9 +772,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "18U-UUNjVIRS",
-        "outputId": "9036fa85-e306-4033-efa9-57fc18e59533"
+        "outputId": "8f2866ee-4d99-43cf-fc57-c61ebbcb85c2"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,19 +796,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "40sqphh1VQuL",
-        "outputId": "a81fdf51-fb60-442d-fecd-ec2883eb489c"
+        "outputId": "acc7453a-3303-443b-87ed-0a483d9c8d1d"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+              "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
             ]
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 23
         }
       ]
     },
@@ -838,9 +838,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m7kHc6M7W6Q2",
-        "outputId": "da18be64-d7f4-462c-aee2-a06c48f1df7a"
+        "outputId": "5735f593-1f66-4797-ba5a-be031b9ccdea"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,6 +864,8 @@
             "단순 결정 트리 회귀 depth = 8 R2 : 0.3368\n",
             "\n",
             "단순 결정 트리 회귀 depth = 9 R2 : 0.3098\n",
+            "\n",
+            "단순 결정 트리 회귀 depth = 10 R2 : 0.2579\n",
             "\n",
             "최적의 결과는 depth=3 r2=0.3931 \n"
           ]
@@ -893,15 +895,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n7ySxjINXM_M",
-        "outputId": "af40c8b5-9440-4779-e476-055d85cc1f82"
+        "outputId": "8b73742e-cd3e-4067-8eac-d373cd103b77"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "다중 결정 트리 R2: 0.6759\n"
+            "다중 결정 트리 R2: 0.6888\n"
           ]
         }
       ]
@@ -930,15 +932,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wIzXnVWaaDa9",
-        "outputId": "5411449e-d81d-4d8f-c9cb-7d7b00a70d86"
+        "outputId": "de44f3da-979c-4a07-e1f8-28327260cdd8"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "단순 서포트 벡터 머신 회귀 R2 : 0.6759\n"
+            "단순 서포트 벡터 머신 회귀 R2 : 0.6888\n"
           ]
         }
       ]
@@ -968,19 +970,19 @@
           "height": 283
         },
         "id": "LxLS6ZnFjaYA",
-        "outputId": "5694d117-8792-462e-d276-066e77e2c8c3"
+        "outputId": "374888fc-30aa-4e97-e856-3d3166ac42d2"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f5f75113390>"
+              "<matplotlib.legend.Legend at 0x7fa599f7c210>"
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -1009,9 +1011,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WsdzA1AAmsrI",
-        "outputId": "a6235f8b-2f0d-4413-a4e4-602f1aef6919"
+        "outputId": "8b6ce798-d42a-4101-e41c-1d0223657d4d"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,9 +1052,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ev06-nPunqKl",
-        "outputId": "e1b30b2d-976d-4aff-f558-fc36cb132999"
+        "outputId": "db86e823-7dad-45ff-f5f7-a65ee7dbb505"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1105,13 +1107,42 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### Multi Layer Perceptron Regressor "
+      ],
       "metadata": {
-        "id": "31mvzlGmohF0"
+        "id": "KTwVHecF7hVz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neural_network import MLPRegressor\n",
+        "mlp_regr = MLPRegressor(solver='adam', hidden_layer_sizes=100, max_iter=1000) #lbfgs, sgd, adam  \n",
+        "\n",
+        "mlp_regr.fit(X_train, y_train)\n",
+        "y_pred = mlp_regr.predict(X_test) \n",
+        "\n",
+        "print('다중 MLP 회귀, R2 : {:.4f}'.format(r2_score(y_test, y_pred)))\n"
+      ],
+      "metadata": {
+        "id": "31mvzlGmohF0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9faf5b06-ed38-443c-ae70-0e3cc1ad724c"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "다중 MLP 회귀, R2 : 0.6060\n"
+          ]
+        }
+      ]
     }
   ]
 }
