--- a/22.10.26/22.10.26.md
+++ b/22.10.26/22.10.26.md
@@ -45,7 +45,7 @@ kaggle
 
 ### 평가지표
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/cc54efa3-f450-4a98-a9e8-575c75bc14df/Untitled.png)
+![image](https://user-images.githubusercontent.com/95389515/198827795-d7db4de8-4fbb-44ed-a336-f3566ed1a304.png)
 
 일단 예측이 맞으면 True, 예측이 틀리면 False → 잘 맞췄을 때 True 
 
@@ -61,8 +61,10 @@ kaggle
 
 **AUC(Area under curve)** : ROC 그래프 아래의 면적 
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/7cd1f794-d9f0-4210-8d65-f6281be67bb7/Untitled.png)
+![image](https://user-images.githubusercontent.com/95389515/198827841-83b0db71-eab9-4c53-bc1d-ff9641bb92d2.png)
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/256cac01-3005-4adf-8fb6-f9d84ab8d6ce/Untitled.png)
+![image](https://user-images.githubusercontent.com/95389515/198827852-3f602fc8-f069-477e-b7ce-3cda9416e7ee.png)
 
 ### 핵심정리
+
+![image](https://user-images.githubusercontent.com/95389515/198827805-dda2f574-5b48-4631-8ff6-7ceb6b70483c.png)
