--- a/22.10.28/01_Supervised_Learning_Classification.ipynb
+++ b/22.10.28/01_Supervised_Learning_Classification.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -34,21 +19,19 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.datasets import load_iris\n",
-        "iris = load_iris() "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "PZpW8gHLFKsc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.datasets import load_iris\n",
+        "iris = load_iris() "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(iris.DESCR)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -56,11 +39,10 @@
         "id": "ZMbEq2LMJPHC",
         "outputId": "484ee066-d0b3-45eb-e612-9daeba39547f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             ".. _iris_dataset:\n",
             "\n",
@@ -127,27 +109,27 @@
             "   - Many, many more ...\n"
           ]
         }
+      ],
+      "source": [
+        "print(iris.DESCR)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ajkrzhdpJQvd"
+      },
+      "outputs": [],
       "source": [
         "data = iris.data\n",
         "label = iris.target \n",
         "columns = iris.feature_names "
-      ],
-      "metadata": {
-        "id": "ajkrzhdpJQvd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data = pd.DataFrame(data, columns=columns)\n",
-        "data.head()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -156,19 +138,9 @@
         "id": "0w8DUyP2JjVg",
         "outputId": "e200da6e-ef31-480a-d0d9-b3b94c1f8763"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-              "0                5.1               3.5                1.4               0.2\n",
-              "1                4.9               3.0                1.4               0.2\n",
-              "2                4.7               3.2                1.3               0.2\n",
-              "3                4.6               3.1                1.5               0.2\n",
-              "4                5.0               3.6                1.4               0.2"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-9c5db85a-f5df-41ad-86c9-fbe6661927fc\">\n",
@@ -312,18 +284,29 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+              "0                5.1               3.5                1.4               0.2\n",
+              "1                4.9               3.0                1.4               0.2\n",
+              "2                4.7               3.2                1.3               0.2\n",
+              "3                4.6               3.1                1.5               0.2\n",
+              "4                5.0               3.6                1.4               0.2"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "data = pd.DataFrame(data, columns=columns)\n",
+        "data.head()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -331,32 +314,39 @@
         "id": "fQoFaPJJJuHC",
         "outputId": "b95de2eb-c45f-484d-aa09-024733fdd73c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(150, 4)"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "data.shape"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-xXFVy3JKFMS"
+      },
       "source": [
         "### Logistic Regression \n",
         "데이터의 준비 "
-      ],
-      "metadata": {
-        "id": "-xXFVy3JKFMS"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_CppETm5KBXL"
+      },
+      "outputs": [],
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
@@ -364,41 +354,34 @@
         "\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "lr = LogisticRegression() "
-      ],
-      "metadata": {
-        "id": "_CppETm5KBXL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "lr.fit(X_train, y_train)\n",
-        "y_pred = lr.predict(X_test) "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "m5WdEjzPMjuw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "lr.fit(X_train, y_train)\n",
+        "y_pred = lr.predict(X_test) "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.metrics import accuracy_score"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "BcDj7PnwNKCj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics import accuracy_score"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print('로지스틱 회귀, 정확도 : {:.2f}'.format(accuracy_score(y_test, y_pred)))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -406,45 +389,43 @@
         "id": "xKDUZvUtNXJi",
         "outputId": "8ec8b3ad-e068-4cbd-d3d5-6d999edf298e"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "로지스틱 회귀, 정확도 : 0.97\n"
           ]
         }
+      ],
+      "source": [
+        "print('로지스틱 회귀, 정확도 : {:.2f}'.format(accuracy_score(y_test, y_pred)))"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Support Vector Machine "
-      ],
       "metadata": {
         "id": "Kv34CY6OOo56"
-      }
+      },
+      "source": [
+        "### Support Vector Machine "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.svm import SVC\n",
-        "svc = SVC(C=10) "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "SU1fYy0SNqJu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.svm import SVC\n",
+        "svc = SVC(C=10) "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "svc.fit(X_train, y_train)\n",
-        "y_pred = svc.predict(X_test)\n",
-        "print('서포트 벡터 머신, 정확도 : {:.2f}'.format(accuracy_score(y_test, y_pred))) "
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -452,36 +433,33 @@
         "id": "URL-1gpkO18R",
         "outputId": "ae6a7d31-959e-4d88-f34b-20dc587a72f4"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "서포트 벡터 머신, 정확도 : 1.00\n"
           ]
         }
+      ],
+      "source": [
+        "svc.fit(X_train, y_train)\n",
+        "y_pred = svc.predict(X_test)\n",
+        "print('서포트 벡터 머신, 정확도 : {:.2f}'.format(accuracy_score(y_test, y_pred))) "
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Decision Tree "
-      ],
       "metadata": {
         "id": "Fd_xDpohQL7Z"
-      }
+      },
+      "source": [
+        "### Decision Tree "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "dt = DecisionTreeClassifier(max_depth=5)\n",
-        "\n",
-        "dt.fit(X_train, y_train)\n",
-        "y_pred = dt.predict(X_test)\n",
-        "print('의사 결정 트리, 정확도 {:.2f}'.format(accuracy_score(y_test, y_pred)))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -489,36 +467,36 @@
         "id": "ICpl29RuPNx4",
         "outputId": "3af625f8-ed58-43bb-af08-85769e821326"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "의사 결정 트리, 정확도 0.97\n"
           ]
         }
+      ],
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "dt = DecisionTreeClassifier(max_depth=5)\n",
+        "\n",
+        "dt.fit(X_train, y_train)\n",
+        "y_pred = dt.predict(X_test)\n",
+        "print('의사 결정 트리, 정확도 {:.2f}'.format(accuracy_score(y_test, y_pred)))"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Random Forest "
-      ],
       "metadata": {
         "id": "_GKTxJy8VYhe"
-      }
+      },
+      "source": [
+        "### Random Forest "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "rf = RandomForestClassifier(max_depth=5)\n",
-        "\n",
-        "rf.fit(X_train, y_train)\n",
-        "y_pred = rf.predict(X_test) \n",
-        "print('랜덤 포레스트, 정확도 {:.2f}'.format(accuracy_score(y_test, y_pred)))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -526,25 +504,54 @@
         "id": "IgYiaeiNRAlX",
         "outputId": "c915f3fd-3798-4c81-9acf-2b2d1adecea7"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "랜덤 포레스트, 정확도 0.97\n"
           ]
         }
+      ],
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "rf = RandomForestClassifier(max_depth=5)\n",
+        "\n",
+        "rf.fit(X_train, y_train)\n",
+        "y_pred = rf.predict(X_test) \n",
+        "print('랜덤 포레스트, 정확도 {:.2f}'.format(accuracy_score(y_test, y_pred)))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "LFp0XcmgVx_S"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.6 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "d3e10ef16274dd72e574b8fa73b58450b957d8421a2901baded3cca26fcf5dda"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
